# DataEngineerProjects

./: README.md
ecommerce_analytics/: .gitignore  Dockerfile  README.md  pyproject.toml
ecommerce_analytics/dags/: ecommerce_dag.py
ecommerce_analytics/dbt_ecommerce/: .user.yml
ecommerce_analytics/dbt_ecommerce/models/example/staging/: stg_cancelamentos.sql  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
ecommerce_analytics/dbt_ecommerce/models/marts/: dim_customer.sql  dim_product.sql  fct_sales.sql  schema.yml
ecommerce_analytics/dbt_ecommerce/models/staging/: schema.yml  stg_products.sql
ecommerce_analytics/include/.dbt/: .user.yml  profiles.yml
ecommerce_analytics/scripts/: generate_fake_data.py  generate_report.py
