[project]
name = "ecommerce-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.0.3",
    "astro>=0.2.7",
    "dbt-core>=1.10.5",
    "dbt-duckdb>=1.9.4",
    "faker>=37.4.2",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
]
